@@ -1,4 +1,4 @@
-.TH SG_SES "8" "March 2018" "sg3_utils\-1.43" SG3_UTILS
+.TH SG_SES "8" "July 2018" "sg3_utils\-1.43" SG3_UTILS
 .SH NAME
 sg_ses \- access a SCSI Enclosure Services (SES) device
 .SH SYNOPSIS
@@ -629,6 +629,9 @@ enclosure) for enclosure (including RAID) status and control. SCSI devices
 that support SAF\-TE report "Processor" peripheral device type (0x3) in their
 INQUIRY response. See the sg_safte utility in this package or the
 safte\-monitor utility on the Internet.
+.PP
+The internal join array is statically allocated and its size is controlled
+by the MX_JOIN_ROWS define. Its current value is 520.
 .SH EXAMPLES
 Examples can also be found at http://sg.danny.cz/sg/sg_ses.html
 .PP
