@@ -2,7 +2,7 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.43 [20180715] [svn: r783]
+Changelog for sg3_utils-1.43 [20180716] [svn: r784]
   - sg_write_x: where x can be normal, atomic, or(write),
     same, scattered, or stream writes with 16 or 32 byte
     cdbs (sbc4r04 for atomic, sbc4r11 for scattered)
@@ -19,6 +19,7 @@ Changelog for sg3_utils-1.43 [20180715] [svn: r783]
       > 4 TB and 80 hours if > 8 TB
   - sg_decode sense: add --cdb and --err=ES options
   - sg_ses: handle 2 bit EIIOE field in aes dpage
+    - increase join array size from 260 to 520 elements 
     - add --quiet option to suppress messages
     - expand join handling of SAS connectors and others
     - expand join debug code
